--- a/src/app/exam/new-exam/new-exam-questions/new-exam-questions.component.html
+++ b/src/app/exam/new-exam/new-exam-questions/new-exam-questions.component.html
@@ -26,6 +26,7 @@
       <ng-container matColumnDef="description">
         <th mat-header-cell *matHeaderCellDef class="col-10 text-center"> Description</th>
         <td mat-cell *matCellDef="let element"  class="w-50">
+          <div [innerHtml]="element.title"></div>
           <div [innerHtml]="element.description" [className]="!wrapDescription ? 'wrap-content': ''"></div>
         </td>
       </ng-container>
