fix: practice exam page image rendering and style fixed

--- a/src/app/exam/practice/practice-exam.component.html
+++ b/src/app/exam/practice/practice-exam.component.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="col-md-4 col-sm-12 mb-sm-5 text-center align-items-center language-logo-container">
-      <img class="exam-language-logo" src="https://cdn.worldvectorlogo.com/logos/java.svg" alt="LAnguage Icon">
+      <img class="exam-language-logo" [src]="exam.imageUrl" alt="Image">
     </div>
 
 
