feat: practice exam summary view design improved

--- a/src/app/exam/practice/practice-exam.component.html
+++ b/src/app/exam/practice/practice-exam.component.html
@@ -25,14 +25,14 @@
             <div class="input-group mb-3">
               <span class="input-group-text border-primary border-opacity-50"><mat-icon>quiz</mat-icon></span>
               <span class="input-group-text border-primary border-opacity-50 w-50">Questions</span>
-              <label class="form-control border-primary border-opacity-50">{{exam.noOfQuestions}}</label>
+              <label class="form-control border-primary border-opacity-50 text-center">{{exam.noOfQuestions}}</label>
             </div>
           </div>
           <div class="col-md-6">
             <div class="input-group mb-3">
               <span class="input-group-text border-primary border-opacity-50"><mat-icon>timer</mat-icon></span>
               <span class="input-group-text border-primary border-opacity-50 w-50">Duration</span>
-              <label class="form-control border-primary border-opacity-50">{{(getApproxExamDuration())}} min</label>
+              <label class="form-control border-primary border-opacity-50 text-center">{{(getApproxExamDuration())}} min</label>
             </div>
           </div>
 
@@ -40,7 +40,7 @@
             <div class="input-group mb-3">
               <span class="input-group-text border-primary border-opacity-50"><mat-icon>speed</mat-icon></span>
               <span class="input-group-text border-primary border-opacity-50 w-50">Difficulty</span>
-              <label class="form-control border-primary border-opacity-50">{{exam.noOfQuestions}}</label>
+              <label class="form-control border-primary border-opacity-50 text-center">{{exam.noOfQuestions}}</label>
             </div>
           </div>
 
@@ -48,7 +48,7 @@
             <div class="input-group mb-3">
               <span class="input-group-text border-primary border-opacity-50"><mat-icon>flag</mat-icon></span>
               <span class="input-group-text border-primary border-opacity-50 w-50">Pass Score</span>
-              <label class="form-control border-primary border-opacity-50">{{exam.passScore}} %</label>
+              <label class="form-control border-primary border-opacity-50 text-center">{{exam.passScore}} %</label>
             </div>
           </div>
 
