--- a/src/app/exam/practice/summary/practice-exam-summary.component.html
+++ b/src/app/exam/practice/summary/practice-exam-summary.component.html
@@ -1,21 +1,61 @@
 <div class="container summaryContainer mt-3">
-  <h5>Exam Summary</h5>
-  <hr/>
+  <div class="row">
+    <div class="col text-center">
+      <h2>{{summary.exam.title}}</h2>
+      <hr/>
+    </div>
+  </div>
 
-  <div class="suumary__details">
-    <div class="row">
+  <div class="summary__details">
+    <div class="row mt-4">
       <div class="result-icon-container col-md-4 col-sm-12 text-center">
-        <img [src]="summary.iconUrl" alt="Exam Staus" class="result-icon">
+        <img [src]="summary.exam.imageUrl" alt="Image" [matTooltip]="summary.exam.title" class="result-icon">
       </div>
 
-      <div class="col-md-8 col-sm-12 mt-4">
-        <h3 class="mb-4">{{summary.title}}</h3>
-        <h5><small>Exam:</small> {{summary.exam.title}}</h5>
-        <h5><small>Result: </small> <label
-          [class]="summary.result == 'Pass' ? 'text-success' : 'text-danger'">{{summary.result}}</label></h5>
-        <h5><small>Scored:</small> {{summary.score}}%</h5>
-        <h5><small>Correct Answers:</small> {{summary.correctAnswer}} out of {{summary.exam.noOfQuestions}}</h5>
+      <div class="col-md-8 col-sm-12">
+
+        <div class="col-12 mb-4 mt-4">
+          <h5 *ngIf="summary.result">Congratulation..!</h5>
+          <h5 *ngIf="!summary.result">Sorry..! Better Luck Next Time.!</h5>
+        </div>
+
+        <div class="col-sm-12 col-lg-6 mb-4 mt-4">
+          <div class="input-group mb-3">
+            <span class="input-group-text border-primary border-opacity-50"><mat-icon>speed</mat-icon></span>
+            <span class="input-group-text border-primary border-opacity-50 w-50">Result</span>
+            <label class="form-control border-primary border-opacity-50">
+              <span class="badge text-bg-success" *ngIf="summary.result">Pass</span>
+              <span class="badge text-bg-danger" *ngIf="!summary.result">Fail</span>
+            </label>
+          </div>
+        </div>
+
+        <div class="col-sm-12 col-lg-6 mb-4 mt-4">
+          <div class="input-group mb-3">
+            <span class="input-group-text border-primary border-opacity-50"><mat-icon>speed</mat-icon></span>
+            <span class="input-group-text border-primary border-opacity-50 w-50">Scored</span>
+            <label class="form-control border-primary border-opacity-50">
+              <span class="badge" [class.text-bg-success]="summary.result"
+                    [class.text-bg-danger]="!summary.result">{{summary.score}}%</span>
+            </label>
+          </div>
+        </div>
+
+        <div class="col-sm-12 col-lg-6 mb-4 mt-4">
+          <div class="input-group mb-3">
+            <span class="input-group-text border-primary border-opacity-50"><mat-icon>speed</mat-icon></span>
+            <span class="input-group-text border-primary border-opacity-50 w-50">Correct Answers</span>
+            <label class="form-control border-primary border-opacity-50">
+              <span class="badge" [class.text-bg-success]="summary.result" [class.text-bg-danger]="!summary.result">
+                {{summary.correctAnswers}} out of {{summary.exam.noOfQuestions}}</span>
+            </label>
+          </div>
+        </div>
+
       </div>
+
+      <h5><small>:</small></h5>
+
     </div>
 
     <div class="summary-actions row mt-4">
