--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -5,6 +5,7 @@ body {
   @include gradient($white, $gray-100);
   min-height: 100vh;
   margin-bottom: 1rem;
+  font-size: 12px;
 }
 
 .mat-snack-bar-primary {
