--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,11 +14,13 @@
           <div class="card-header">
             <h6>{{exam.title}}</h6>
           </div>
-          <div class="row row align-items-center">
-            <div class="col-sm-8 col-md-4 align-items-center text-center m-auto mt-sm-4">
+          <div class="row align-items-center just">
+
+            <div class="col-sm-8 col-md-4 align-items-center text-center mt-1">
               <img [src]="exam.imageUrl"
                    class="exam__logo img-fluid rounded-start" [alt]="exam.title" [title]="exam.title"/>
             </div>
+
             <div class="col-sm-8 col-md-8">
               <div class="card-body">
                 <div class="card-title text-wrap overflow-hidden text-primary">
