feat: difficulty field added to exam

--- a/src/app/exam/practice/practice-exam.component.html
+++ b/src/app/exam/practice/practice-exam.component.html
@@ -40,7 +40,7 @@
             <div class="input-group mb-3">
               <span class="input-group-text border-primary border-opacity-50"><mat-icon>speed</mat-icon></span>
               <span class="input-group-text border-primary border-opacity-50 w-50">Difficulty</span>
-              <label class="form-control border-primary border-opacity-50 text-center">{{exam.noOfQuestions}}</label>
+              <label class="form-control border-primary border-opacity-50 text-center">{{exam.difficulty}}</label>
             </div>
           </div>
 
