--- a/src/app/exam/practice/summary/practice-exam-summary.component.html
+++ b/src/app/exam/practice/summary/practice-exam-summary.component.html
@@ -52,6 +52,18 @@
           </div>
         </div>
 
+        <div class="col-sm-12 col-lg-6 mb-4 mt-4">
+          <div class="input-group mb-3">
+            <span class="input-group-text border-primary border-opacity-50"><mat-icon>speed</mat-icon></span>
+            <span class="input-group-text border-primary border-opacity-50 w-50">Difficulty</span>
+            <label class="form-control border-primary border-opacity-50">
+              <span class="badge text-bg-success">
+                {{summary.exam.difficulty}}</span>
+            </label>
+          </div>
+        </div>
+
+
       </div>
 
       <h5><small>:</small></h5>
