--- a/src/app/exam/new-exam/new-exam-details/new-exam-details.component.html
+++ b/src/app/exam/new-exam/new-exam-details/new-exam-details.component.html
@@ -69,7 +69,7 @@
           <fieldset class="border rounded-3 px-3 row">
             <legend class="float-none w-auto px-3 text-secondary">Optional</legend>
 
-            <div class="col-md-4 col-sm-12 mb-3">
+            <div class="col-md-3 col-sm-12 mb-3">
               <label for="minPassingScore" class="form-label text-secondary">Pass Score</label>
               <div class="input-group">
                 <input id="minPassingScore" name="minPassingScore" type="number" class="form-control text-primary"
@@ -77,13 +77,22 @@
                 <span class="input-group-text">%</span>
               </div>
             </div>
-            <div class="col-md-4 col-sm-12 mb-3">
+            <div class="col-md-3 col-sm-12 mb-3">
+              <label for="difficulty" class="form-label text-secondary">Difficulty</label>
+
+              <select id="difficulty" name="difficulty" class="form-select text-primary"
+                      [(ngModel)]="exam.difficulty">
+                <option *ngFor="let difficulty of examDifficulty" [value]="difficulty">{{difficulty}}</option>
+              </select>
+
+            </div>
+            <div class="col-md-3 col-sm-12 mb-3">
               <label for="noOfQuestions" class="form-label text-secondary">No Of Questions</label>
               <input id="noOfQuestions" name="noOfQuestions" type="number" class="form-control text-primary"
                      [(ngModel)]="exam.noOfQuestions">
             </div>
 
-            <div class="col-md-4 col-sm-12 mb-3">
+            <div class="col-md-3 col-sm-12 mb-3">
               <label for="displaySolutionOption" class="form-label text-secondary">Display Solution</label>
               <select id="displaySolutionOption" name="displaySolutionOption" class="form-select text-primary"
                       [(ngModel)]="exam.solutionDisplayOption">
