--- a/src/app/exam/new-exam/new-exam-summary/new-exam-summary.component.html
+++ b/src/app/exam/new-exam/new-exam-summary/new-exam-summary.component.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="col-md-12 col-sm-12 mb-3 form-floating">
-          <div id="difficulty" class="form-control text-primary bg-white ">{{exam.noOfQuestions}}</div>
+          <div id="difficulty" class="form-control text-primary bg-white ">{{exam.difficulty}}</div>
           <label for="difficulty" class="text-primary ms-1">Difficulty</label>
         </div>
 
