--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,8 +34,12 @@
                   </div>
 
                   <div [hidden]="!exam.noOfQuestions">
-                    <small>Questions: {{exam.noOfQuestions}}</small>
-                    <small class="ms-3">Duration: {{getApproxExamDuration(exam)}} min</small>
+                    <small>Questions: <span class="badge text-bg-primary">{{exam.noOfQuestions}}</span></small>
+                    <small class="ms-3">Duration: <span class="badge text-bg-primary">{{getApproxExamDuration(exam)}} min</span></small>
+                  </div>
+
+                  <div [hidden]="!exam.difficulty">
+                    <small>Difficulty: <span class="badge text-bg-primary">{{exam.difficulty}}</span></small>
                   </div>
 
                 </div>
