fix: home page card layout fixed to have fixed height
#81 fixed

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,9 +23,11 @@
 
             <div class="col-sm-8 col-md-8">
               <div class="card-body">
+                <!--
                 <div class="card-title text-wrap overflow-hidden text-primary">
-                  <p class="text-primary">{{exam.title}}</p>
+                  <p class="text-primary"></p>
                 </div>
+                -->
                 <div class="card-text text-primary">
                   <p class="exam-description" [innerHTML]="exam.description"></p>
 
