--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -41,15 +41,15 @@
                     </div>
                   </div>
 
-                  <div class="d-flex flex-row justify-content-evenly" [hidden]="!exam.noOfQuestions">
-                    <div class="">
+                  <div class="d-flex flex-row justify-content-start" [hidden]="!exam.noOfQuestions">
+                    <div>
                       <small>Questions: <span class="badge text-bg-primary">{{exam.noOfQuestions}}</span></small>
                     </div>
-                    <div class="">
+                    <div class="ms-2">
                       <small>Duration: <span class="badge text-bg-primary">{{getApproxExamDuration(exam)}}
                         min</span></small>
                     </div>
-                    <div class="">
+                    <div class="ms-2">
                       <small [hidden]="!exam.difficulty">Difficulty: <span class="badge text-bg-primary">{{exam.difficulty}}</span></small>
                     </div>
                   </div>
