feat: copy write additional text displayed only for larger screens

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,8 +2,8 @@
   <div class="row footer__links-row">
     <div class="col-12 text-center">
       <div class="text-light p-2 font-monospace footer__copywriter__text">
-        &#169;2023 Designed & developed by <a href="https://github.com/nramc" target="_blank" class="text-light">Ramachandran Nellaiyappan</a>.
-        Feel free to fork and use it. By developer for developers.
+        &#169;2023 Designed & developed by <a href="https://github.com/nramc" target="_blank" class="text-light">Ram</a>.
+        <span class="d-none d-sm-inline">Feel free to fork and use it. By developer for developers.</span>
       </div>
     </div>
     <div class="col-12">
