feat: text editor config aligned throughout the project

--- a/src/app/exam/new-exam/new-exam-details/new-exam-details.component.html
+++ b/src/app/exam/new-exam/new-exam-details/new-exam-details.component.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="col-md-12 col-sm-12 mb-3">
-          <angular-editor name="examDescriptionEditor" placeholder="enter description here"
+          <angular-editor name="examDescriptionEditor" placeholder="Enter description here.." class="text-primary"
                           [config]="editorConfig" [(ngModel)]="exam.description"></angular-editor>
         </div>
 
