--- a/src/app/exam/new-exam/new-question/new-question.component.html
+++ b/src/app/exam/new-exam/new-question/new-question.component.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="col-12 mb-3">
-          <angular-editor name="questionDescriptionEditor" placeholder="enter description here" class="text-primary"
+          <angular-editor name="questionDescriptionEditor" placeholder="Enter description here.." class="text-primary"
                           [config]="editorConfig" [(ngModel)]="newQuestion.description"></angular-editor>
         </div>
 
