--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,10 +4,11 @@
       <div class="text-light p-2 font-monospace footer__copywriter__text">
         &#169;2023 Designed & developed by <a href="https://github.com/nramc" target="_blank" class="text-light">Ram</a>.
         <span class="d-none d-sm-inline">Feel free to fork and use it. By developer for developers.</span>
+        <span class="text-end text-white-50 d-inline d-sm-none"><small> v{{appVersion}} </small></span>
       </div>
     </div>
-    <div class="col-12">
-      <div class="text-center">
+    <div class="col-md-12 d-flex flex-md-row flex-column justify-content-center">
+      <div class="col-md-11 text-center">
           <button mat-button class="text-light" (click)="goto('https://github.com/nramc/mock-exam-app/issues/new')">
             Report Issue
             <mat-icon>bug_report</mat-icon>
@@ -32,9 +33,8 @@
           LinkedIn
           <mat-icon>supervisor_account</mat-icon>
         </button>
-
       </div>
-      <div class="text-end">v0.0.1</div>
+      <div class="col-md-1 text-end text-white-50 d-none d-sm-inline"><small>v{{appVersion}}</small></div>
     </div>
   </div>
 </div>
