--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,11 @@
   </div>
 
   <div class="home__content mt-sm-4">
+    <div class="row">
+      <div class="col-12">
+        <app-search-component (onSearchEvent)="searchExams($event)"></app-search-component>
+      </div>
+    </div>
 
     <div class="row row-cols-1 row-cols-md-3 flex-grow-1 flex-fill h-100 row align-items-center">
 
