feat: minor style changes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="container home">
 
   <div class="home__title col-12 m-auto text-center">
-    <h1>Mock Certification Exams</h1>
-    <hr>
+    <h4>Certification Practice Exams</h4>
+    <hr class="half-center">
   </div>
 
   <div class="home__content mt-sm-4">
