--- a/src/app/components/search-component/search-component.component.html
+++ b/src/app/components/search-component/search-component.component.html
@@ -1,5 +1,5 @@
 <div class="input-group mb-3">
-  <input type="text" class="form-control" placeholder="Search your practice exams here..!"
+  <input type="text" class="form-control" [placeholder]="placeholder"
          [(ngModel)]="searchKeyword" (ngModelChange)="search()">
   <button class="btn btn-outline-secondary" type="button" id="search" (click)="search()">
     <mat-icon>search</mat-icon>
