--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
   <div class="home__content mt-sm-4">
     <div class="row">
       <div class="col-12">
-        <app-search-component (onSearchEvent)="searchExams($event)"></app-search-component>
+        <app-search-component (onSearchEvent)="searchExams($event)" placeholder="Keyword to search your practice exam..!"></app-search-component>
       </div>
     </div>
 
