feat: learning path added to header menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,10 @@
         <mat-icon aria-hidden="false" aria-label="Home" fontIcon="home"></mat-icon>
       </button>
 
+      <button mat-icon-button  color="primary" (click)="navigateToLearningPaths()" matTooltip="Learning Paths">
+        <mat-icon aria-hidden="false">route</mat-icon>
+      </button>
+
       <button mat-icon-button extended color="primary" (click)="newExam()" matTooltip="Create New Exam">
         <mat-icon>queue_play_next</mat-icon>
       </button>
