minor: header icon change

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,11 @@
     <div class="text-end">
 
       <button mat-icon-button color="primary" (click)="home()" matTooltip="Home">
-        <mat-icon aria-hidden="false" aria-label="Home" fontIcon="home"></mat-icon>
+        <mat-icon>home</mat-icon>
+      </button>
+
+      <button mat-icon-button  color="primary" (click)="navigateToLearningPaths()" matTooltip="Learning Paths">
+        <mat-icon>route</mat-icon>
       </button>
 
       <button mat-icon-button  color="primary" (click)="navigateToLearningPaths()" matTooltip="Learning Paths">
